# canari

./: .buildinfo  .env  .gitignore  LICENSE  MANIFEST.in  README.md  api.html  example_model_definition.py  genindex.html  index.html  installation_guide.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tutorials.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation_guide.doctree  tutorials.doctree
_modules/: index.html
_static/: documentation_options.js
api/: canari.common.html  canari.component.autoregression_component.html  canari.component.base_component.html  canari.component.baseline_component.html  canari.component.bounded_autoregression_component.html  canari.component.html  canari.component.lstm_component.html  canari.component.periodic_component.html  canari.component.white_noise_component.html  canari.data_process.html  canari.data_struct.html  canari.data_visualization.html  canari.html  canari.model.html  canari.model_optimizer.html  canari.skf.html  canari.skf_optimizer.html  modules.html
benchmark/: benchmark_11_monthly_tune.py  benchmark_12_monthly_tune.py  benchmark_13_monthly_tune.py  benchmark_14_tune.py  benchmark_1_tune.py  benchmark_2_tune.py  benchmark_3_tune.py  benchmark_4_tune.py  benchmark_4_tune_present.py  benchmark_5_tune.py  benchmark_6_tune.py  benchmark_7_tune.py  benchmark_8_tune.py  test_11_benchmark_monthly_tune.py  test_12_benchmark_monthly_tune.py  test_14_benchmark_tune.py  test_3_benchmark_tune.py  test_4_benchmark_tune.py  test_6_benchmark_tune.py  test_9_benchmark_tune.py
data/: HQ_LGA007Y.csv
docs/: Makefile  api.rst  conf.py  index.rst  installation_guide.rst  modules.rst  requirements.txt  test.rst
examples/: HQ_hybrid.py  LGA007Y.py  __init__.py  adsf  anomaly_detection.html  data_process.py  demo.ipynb  demo.py  demo_forecast.ipynb  forecasting_with_lstm.html  forecasting_with_lstm.ipynb  forecasting_with_lstm_multivariate.html  forecasting_with_lstm_univariate.html  forecasting_without_lstm.html  forecasting_without_lstm.ipynb  parameter_tuning.html  read_DAT_file.html  real_forecast_ts5.py  real_forecast_ts5_pretrained.py  real_forecast_ts8.py  real_forecast_ts8_pretrained.py  test.py  test_10_benchmark.py  test_10_benchmark_.py  test_10_benchmark_tune.py  test_11_benchmark.py  test_11_benchmark_detrend.py  test_11_benchmark_monthly_tune.py  test_11_benchmark_monthly_tune_.py  test_11_benchmark_monthly_tune_v1.py  test_12_benchmark_monthly_tune.py  test_1_benchmark.py  test_1_benchmark_.py  test_1_benchmark_tune.py  test_1_forecast.py  test_2_benchmark.py  test_2_benchmark_.py  test_2_benchmark_tune.py  test_3_benchmark_tune.py  test_4_benchmark.py  (+52 more)
saved_params/: lstm_CASC_LGA007EFAPRG910_2024_07.pth  lstm_net_learn_with_ar.pth  lstm_net_temp.pth  lstm_net_test.pth  lstm_ts08.pth
src/: SKF.py  SKF_optimizer.py  __init__.py  (+22 more)
(+271 files in other folders)
