[build-system]
requires = ["setuptools>=75.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycanari"
version = "0.0.2"
description = "Open-source library for probabilistic anomaly detection in time series"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "Van-Dai Vuong, Luong-Ha Nguyen, and James-A. Goulet", email = "james.goulet@polymtl.ca" }
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
  "matplotlib==3.8.2",
  "numpy==1.26.0",
  "pandas==2.1.4",
  "tqdm==4.66.1",
  "fire==0.5.0",
  "statsmodels==0.14.4",
  "optuna==4.2.0",
  "ray[tune]",
  "scikit-optimize",
  "pytest==8.3.4"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


