[build-system]
requires = ["setuptools>=75.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycanari"
version = "0.0.3"
description = """
Canari is an open-source library for online change point detection in univariate time series. 
It has been developed in the context of long-term online monitoring where we aim for the early 
detection of subtle change points in the baseline response, while limiting to a minimum the number
of false alarms.
"""
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "Van-Dai Vuong, Luong-Ha Nguyen, and James-A. Goulet", email = "james.goulet@polymtl.ca" }
]

[project.urls]
Homepage = "https://bayes-works.github.io/canari/index.html"
Repository = "https://github.com/Bayes-Works/canari"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
  "matplotlib==3.8.2",
  "numpy==1.26.0",
  "pandas==2.1.4",
  "tqdm==4.66.1",
  "fire==0.5.0",
  "statsmodels==0.14.4",
  "optuna==4.2.0",
  "ray[tune]",
  "scikit-optimize",
  "pytest==8.3.4"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


